# cic_digital

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_content_schema.py  002_readonly_db_user.py
scripts/: clean_index.py  gen_article_groups.py  insert_article_groups.py
src/cic_digital/: __init__.py  main.py
src/cic_digital/api/: exception_handlers.py  factory.py  middleware.py  router.py
src/cic_digital/api/endpoints/: health.py
src/cic_digital/api/v1/: read.py  router.py
src/cic_digital/core/: __init__.py  config.py  exceptions.py  logger.py  security.py
src/cic_digital/db/: __init__.py  connection.py
src/cic_digital/dtos/: __init__.py  base.py  read_index.py
src/cic_digital/models/: __init__.py  content.py
src/cic_digital/persistence/: __init__.py  base.py  constants.py  database.py  models.py
src/cic_digital/repositories/: __init__.py  base.py  read_index_repository.py
src/cic_digital/schemas/: __init__.py  read_index.py  response.py
src/cic_digital/services/: __init__.py  base.py  read_index_service.py
src/cic_digital/utils/: __init__.py
tests/: test_api.py  test_read_index_service.py  test_schema.py
